--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+## Xcode
+Demo.xcworkspace/
 
 ## Build generated
 build/
