--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,20 @@ notifications:
 language: swift
 os: osx
 osx_image: xcode10.2
-xcode_workspace: gen/Listable/Listable.xcworkspace
+xcode_workspace: Demo/Demo.xcworkspace
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
-before_install:
+
+podfile: Podfile
+-before_install:
   - gem update --system
   - gem install bundler
   - bundle install
   - bundle exec pod repo update
-  - bundle exec pod gen Listable.podspec
 
-install:
-  - echo
 
 matrix:
   include:
-    - xcode_scheme: Listable-Unit-Tests
+    - xcode_scheme:
+      - ListableCore-Unit-Tests
+      - ListableCollectionView-Unit-Tests
+      - ListableTableView-Unit-Tests
