--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,17 @@ osx_image: xcode10.2
 xcode_workspace: Demo/Demo.xcworkspace
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
 
-podfile: Podfile
 -before_install:
   - gem update --system
   - gem install bundler
   - bundle install
   - bundle exec pod repo update
 
+install:
+  - bundle exec pod install
 
 matrix:
   include:
-    - xcode_scheme:
-      - ListableCore-Unit-Tests
-      - ListableCollectionView-Unit-Tests
-      - ListableTableView-Unit-Tests
+    - xcode_scheme: ListableCore-Unit-Tests
+    - xcode_scheme: ListableCollectionView-Unit-Tests
+    - xcode_scheme: ListableTableView-Unit-Tests
