--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ osx_image: xcode10.2
 xcode_workspace: Demo/Demo.xcworkspace
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
 
--before_install:
+before_install:
   - gem update --system
   - gem install bundler
   - bundle install
