Don't run 3 builds in CI, use Listable-CI-Test-Suite.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,4 @@ install:
 
 matrix:
   include:
-    - xcode_scheme: ListableCore-Unit-Tests
-    - xcode_scheme: ListableCollectionView-Unit-Tests
-    - xcode_scheme: ListableTableView-Unit-Tests
+    - xcode_scheme: Listable-CI-Test-Suite
