--- a/Demo/Demo.xcodeproj/xcshareddata/xcschemes/Listable-CI-Test-Suite.xcscheme
+++ b/Demo/Demo.xcodeproj/xcshareddata/xcschemes/Listable-CI-Test-Suite.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "42E597D5C7B3B1791477E38BDC8C3FDD"
+               BuildableName = "ListableBlueprintTableView-Unit-Tests.xctest"
+               BlueprintName = "ListableBlueprintTableView-Unit-Tests"
+               ReferencedContainer = "container:../Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -55,6 +69,16 @@
                BlueprintIdentifier = "39FCAA36A3F11D747B7635A64DDD0402"
                BuildableName = "ListableCollectionView-Unit-Tests.xctest"
                BlueprintName = "ListableCollectionView-Unit-Tests"
+               ReferencedContainer = "container:../Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "42E597D5C7B3B1791477E38BDC8C3FDD"
+               BuildableName = "ListableBlueprintTableView-Unit-Tests.xctest"
+               BlueprintName = "ListableBlueprintTableView-Unit-Tests"
                ReferencedContainer = "container:../Pods/Pods.xcodeproj">
             </BuildableReference>
          </TestableReference>
