--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -9,6 +9,49 @@ on:
 
 jobs:
 
+  ios_15:
+    name: iOS 15
+
+    runs-on: macos-11
+
+    steps:
+      - name: Switch To Xcode 13.1
+        run: sudo xcode-select -switch /Applications/Xcode_13.1.app
+
+      - name: Checkout repository
+        uses: actions/checkout@v1
+
+      # Build Caching
+
+      - name: Cache Bundler
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - name: Cache Cocoapods
+        uses: actions/cache@v2
+        with:
+          path: Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+
+      # Install & Build
+
+      - name: Bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
+      - name: Pod Install
+        run: bundle exec pod install --repo-update
+
+      - name: Run Tests
+        run: Scripts/run_ios15_tests.sh
+
   ios_14:
     name: iOS 14
 
