Use macos-12 for spm job

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,6 +12,8 @@ jobs:
   spm:
     name: Swift Package Manager
 
+    runs-on: macos-12
+
     steps:
       - name: Switch To Xcode 13.1
         run: sudo xcode-select -switch /Applications/Xcode_13.1.app
