--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,4 +1,5 @@
   # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md
+  # https://github.com/actions/runner-images/blob/main/images/macos/macos-12-Readme.md
   # https://github.com/actions/cache/blob/ff937cc95032836a535d249de4ce2fc52aeae834/examples.md
 
 
@@ -15,8 +16,8 @@ jobs:
     runs-on: macos-12
 
     steps:
-      - name: Switch To Xcode 13.1
-        run: sudo xcode-select -switch /Applications/Xcode_13.1.app
+      - name: Switch To Xcode 14.2
+        run: sudo xcode-select -switch /Applications/Xcode_14.2.app
 
       - name: Checkout repository
         uses: actions/checkout@v1
@@ -26,14 +27,60 @@ jobs:
       - name: Build
         run: swift build -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios15.0-simulator"
 
+  ios_16:
+        name: iOS 16
+
+        runs-on: macos-12
+
+        steps:
+          - name: Switch To Xcode 14.2
+            run: sudo xcode-select -switch /Applications/Xcode_14.2.app
+
+          - name: Checkout repository
+            uses: actions/checkout@v1
+
+          # Build Caching
+
+          - name: Cache Bundler
+            uses: actions/cache@v2
+            with:
+              path: vendor/bundle
+              key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+              restore-keys: |
+                ${{ runner.os }}-gems-
+
+          - name: Cache Cocoapods
+            uses: actions/cache@v2
+            with:
+              path: Pods
+              key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+              restore-keys: |
+                ${{ runner.os }}-pods-
+
+          # Install & Build
+
+          - name: Bundle install
+            run: |
+              bundle config path vendor/bundle
+              bundle install --jobs 4 --retry 3
+
+          - name: Pod Install
+            run: bundle exec pod install --repo-update
+
+          - name: Run Tests
+            run: Scripts/run_ios16_tests.sh
+
   ios_15:
     name: iOS 15
 
-    runs-on: macos-11
+    runs-on: macos-12
 
     steps:
-      - name: Switch To Xcode 13.1
-        run: sudo xcode-select -switch /Applications/Xcode_13.1.app
+      - name: Switch To Xcode 14
+        run: sudo xcode-select -switch /Applications/Xcode_14.2.app
+
+      - name: Install iOS 15.2
+        run: xcversion simulators --install="iOS 15.2"
 
       - name: Checkout repository
         uses: actions/checkout@v1
@@ -72,11 +119,14 @@ jobs:
   ios_14:
     name: iOS 14
 
-    runs-on: macos-11
+    runs-on: macos-12
 
     steps:
-      - name: Switch To Xcode 12.5.1
-        run: sudo xcode-select -switch /Applications/Xcode_12.5.1.app
+      - name: Switch To Xcode 14
+        run: sudo xcode-select -switch /Applications/Xcode_14.2.app
+
+      - name: Install iOS 14
+        run: xcversion simulators --install="iOS 14.5"
 
       - name: Checkout repository
         uses: actions/checkout@v1
