Update CI script to reference the `xcodesorg/made/xcodes` package for installing simulator runtimes.
Update CI script to install `aria2` to improve simulator runtime download speeds.

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -80,7 +80,7 @@ jobs:
         run: sudo xcode-select -switch /Applications/Xcode_14.2.app
 
       - name: Install xcodes
-        run: brew install robotsandpencils/made/xcodes
+        run: brew install aria2 xcodesorg/made/xcodes
 
       - name: Install iOS ${{ matrix.sdk }}
         run: sudo xcodes runtimes install "iOS 15.2"
@@ -129,7 +129,7 @@ jobs:
         run: sudo xcode-select -switch /Applications/Xcode_14.2.app
 
       - name: Install xcodes
-        run: brew install robotsandpencils/made/xcodes
+        run: brew install aria2 xcodesorg/made/xcodes
 
       - name: Install iOS ${{ matrix.sdk }}
         run: sudo xcodes runtimes install "iOS 14.5"
