--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,21 +31,23 @@ jobs:
     runs-on: macos-13-xlarge
 
     steps:
-      - name: Switch To Xcode 15.1
-        run: sudo xcode-select -switch /Applications/Xcode_15.1.app
 
       - name: Checkout repository
         uses: actions/checkout@v1
 
-      # Build Caching
+      - name: Read env
+        run: cat .github/workflows/env.properties >> $GITHUB_ENV
 
-      - name: Cache Bundler
-        uses: actions/cache@v2
+      - name: Switch to Xcode ${{ env.xcode_version }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          # Uses version specified in .ruby_version
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+      # Build Caching
 
       - name: Cache Cocoapods
         uses: actions/cache@v2
@@ -56,11 +58,6 @@ jobs:
             ${{ runner.os }}-pods-
 
       # Install & Build
-
-      - name: Bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
 
       - name: Pod Install
         run: bundle exec pod install --repo-update
@@ -68,144 +65,143 @@ jobs:
       - name: Run Tests
         run: Scripts/run_ios17_tests.sh
 
+  # ios_16:
+  #   name: iOS 16
 
-  ios_16:
-    name: iOS 16
+  #   runs-on: macos-13-xlarge
 
-    runs-on: macos-13-xlarge
+  #   steps:
+  #     - name: Switch To Xcode 15.1
+  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
 
-    steps:
-      - name: Switch To Xcode 15.1
-        run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v1
 
-      - name: Checkout repository
-        uses: actions/checkout@v1
+  #     # Build Caching
 
-      # Build Caching
+  #     - name: Cache Bundler
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: vendor/bundle
+  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-gems-
 
-      - name: Cache Bundler
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+  #     - name: Cache Cocoapods
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: Pods
+  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pods-
 
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
+  #     # Install & Build
 
-      # Install & Build
+  #     - name: Bundle install
+  #       run: |
+  #         bundle config path vendor/bundle
+  #         bundle install --jobs 4 --retry 3
 
-      - name: Bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+  #     - name: Pod Install
+  #       run: bundle exec pod install --repo-update
 
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
+  #     - name: Run Tests
+  #       run: Scripts/run_ios16_tests.sh
 
-      - name: Run Tests
-        run: Scripts/run_ios16_tests.sh
+  # ios_15:
+  #   name: iOS 15
 
-  ios_15:
-    name: iOS 15
+  #   runs-on: macos-13-xlarge
 
-    runs-on: macos-13-xlarge
+  #   steps:
+  #     - name: Switch To Xcode 15.1
+  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
 
-    steps:
-      - name: Switch To Xcode 15.1
-        run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+  #     - name: Install xcodes
+  #       run: brew install aria2 xcodesorg/made/xcodes
 
-      - name: Install xcodes
-        run: brew install aria2 xcodesorg/made/xcodes
+  #     - name: Install iOS ${{ matrix.sdk }}
+  #       run: sudo xcodes runtimes install "iOS 15.2"
 
-      - name: Install iOS ${{ matrix.sdk }}
-        run: sudo xcodes runtimes install "iOS 15.2"
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v1
 
-      - name: Checkout repository
-        uses: actions/checkout@v1
+  #     # Build Caching
 
-      # Build Caching
+  #     - name: Cache Bundler
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: vendor/bundle
+  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-gems-
 
-      - name: Cache Bundler
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+  #     - name: Cache Cocoapods
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: Pods
+  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pods-
 
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
+  #     # Install & Build
 
-      # Install & Build
+  #     - name: Bundle install
+  #       run: |
+  #         bundle config path vendor/bundle
+  #         bundle install --jobs 4 --retry 3
 
-      - name: Bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+  #     - name: Pod Install
+  #       run: bundle exec pod install --repo-update
 
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
+  #     - name: Run Tests
+  #       run: Scripts/run_ios15_tests.sh
 
-      - name: Run Tests
-        run: Scripts/run_ios15_tests.sh
+  # ios_14:
+  #   name: iOS 14
 
-  ios_14:
-    name: iOS 14
+  #   runs-on: macos-13-xlarge
 
-    runs-on: macos-13-xlarge
+  #   steps:
+  #     - name: Switch To Xcode 14
+  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
 
-    steps:
-      - name: Switch To Xcode 14
-        run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+  #     - name: Install xcodes
+  #       run: brew install aria2 xcodesorg/made/xcodes
 
-      - name: Install xcodes
-        run: brew install aria2 xcodesorg/made/xcodes
+  #     - name: Install iOS ${{ matrix.sdk }}
+  #       run: sudo xcodes runtimes install "iOS 14.5"
 
-      - name: Install iOS ${{ matrix.sdk }}
-        run: sudo xcodes runtimes install "iOS 14.5"
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v1
 
-      - name: Checkout repository
-        uses: actions/checkout@v1
+  #     # Build Caching
 
-      # Build Caching
+  #     - name: Cache Bundler
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: vendor/bundle
+  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-gems-
 
-      - name: Cache Bundler
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+  #     - name: Cache Cocoapods
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: Pods
+  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pods-
 
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
+  #     # Install & Build
 
-      # Install & Build
+  #     - name: Bundle install
+  #       run: |
+  #         bundle config path vendor/bundle
+  #         bundle install --jobs 4 --retry 3
 
-      - name: Bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+  #     - name: Pod Install
+  #       run: bundle exec pod install --repo-update
 
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
-
-      - name: Run Tests
-        run: Scripts/run_ios14_tests.sh
+  #     - name: Run Tests
+  #       run: Scripts/run_ios14_tests.sh
