--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -65,143 +65,134 @@ jobs:
       - name: Run Tests
         run: Scripts/run_ios17_tests.sh
 
-  # ios_16:
-  #   name: iOS 16
+  ios_16:
+    name: iOS 16
 
-  #   runs-on: macos-13-xlarge
+    runs-on: macos-13-xlarge
 
-  #   steps:
-  #     - name: Switch To Xcode 15.1
-  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+    steps:
 
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v1
+      - name: Checkout repository
+        uses: actions/checkout@v1
 
-  #     # Build Caching
+      - name: Read env
+        run: cat .github/workflows/env.properties >> $GITHUB_ENV
 
-  #     - name: Cache Bundler
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: vendor/bundle
-  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-gems-
+      - name: Switch to Xcode ${{ env.xcode_version }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
 
-  #     - name: Cache Cocoapods
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: Pods
-  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-pods-
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          # Uses version specified in .ruby_version
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-  #     # Install & Build
+      # Build Caching
 
-  #     - name: Bundle install
-  #       run: |
-  #         bundle config path vendor/bundle
-  #         bundle install --jobs 4 --retry 3
+      - name: Cache Cocoapods
+        uses: actions/cache@v2
+        with:
+          path: Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
-  #     - name: Pod Install
-  #       run: bundle exec pod install --repo-update
+      # Install & Build
 
-  #     - name: Run Tests
-  #       run: Scripts/run_ios16_tests.sh
+      - name: Pod Install
+        run: bundle exec pod install --repo-update
 
-  # ios_15:
-  #   name: iOS 15
+      - name: Run Tests
+        run: Scripts/run_ios16_tests.sh
 
-  #   runs-on: macos-13-xlarge
+  ios_15:
+    name: iOS 15
 
-  #   steps:
-  #     - name: Switch To Xcode 15.1
-  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+    runs-on: macos-13-xlarge
 
-  #     - name: Install xcodes
-  #       run: brew install aria2 xcodesorg/made/xcodes
+    steps:
 
-  #     - name: Install iOS ${{ matrix.sdk }}
-  #       run: sudo xcodes runtimes install "iOS 15.2"
+      - name: Checkout repository
+        uses: actions/checkout@v1
 
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v1
+      - name: Read env
+        run: cat .github/workflows/env.properties >> $GITHUB_ENV
 
-  #     # Build Caching
+      - name: Switch to Xcode ${{ env.xcode_version }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
 
-  #     - name: Cache Bundler
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: vendor/bundle
-  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-gems-
+      - name: Install xcodes
+        run: brew install aria2 xcodesorg/made/xcodes
 
-  #     - name: Cache Cocoapods
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: Pods
-  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-pods-
+      - name: Install iOS ${{ matrix.sdk }}
+        run: sudo xcodes runtimes install "iOS 15.2"
 
-  #     # Install & Build
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          # Uses version specified in .ruby_version
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-  #     - name: Bundle install
-  #       run: |
-  #         bundle config path vendor/bundle
-  #         bundle install --jobs 4 --retry 3
+      # Build Caching
 
-  #     - name: Pod Install
-  #       run: bundle exec pod install --repo-update
+      - name: Cache Cocoapods
+        uses: actions/cache@v2
+        with:
+          path: Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
-  #     - name: Run Tests
-  #       run: Scripts/run_ios15_tests.sh
+      # Install & Build
 
-  # ios_14:
-  #   name: iOS 14
+      - name: Pod Install
+        run: bundle exec pod install --repo-update
 
-  #   runs-on: macos-13-xlarge
+      - name: Run Tests
+        run: Scripts/run_ios15_tests.sh
 
-  #   steps:
-  #     - name: Switch To Xcode 14
-  #       run: sudo xcode-select -switch /Applications/Xcode_15.1.app
+  ios_14:
+    name: iOS 14
 
-  #     - name: Install xcodes
-  #       run: brew install aria2 xcodesorg/made/xcodes
+    runs-on: macos-13-xlarge
 
-  #     - name: Install iOS ${{ matrix.sdk }}
-  #       run: sudo xcodes runtimes install "iOS 14.5"
+    steps:
 
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v1
+      - name: Checkout repository
+        uses: actions/checkout@v1
 
-  #     # Build Caching
+      - name: Read env
+        run: cat .github/workflows/env.properties >> $GITHUB_ENV
 
-  #     - name: Cache Bundler
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: vendor/bundle
-  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-gems-
+      - name: Switch to Xcode ${{ env.xcode_version }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
 
-  #     - name: Cache Cocoapods
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: Pods
-  #         key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-pods-
+      - name: Install xcodes
+        run: brew install aria2 xcodesorg/made/xcodes
 
-  #     # Install & Build
+      - name: Install iOS ${{ matrix.sdk }}
+        run: sudo xcodes runtimes install "iOS 14.5"
 
-  #     - name: Bundle install
-  #       run: |
-  #         bundle config path vendor/bundle
-  #         bundle install --jobs 4 --retry 3
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          # Uses version specified in .ruby_version
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-  #     - name: Pod Install
-  #       run: bundle exec pod install --repo-update
+      # Build Caching
 
-  #     - name: Run Tests
-  #       run: Scripts/run_ios14_tests.sh
+      - name: Cache Cocoapods
+        uses: actions/cache@v2
+        with:
+          path: Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+
+      # Install & Build
+
+      - name: Pod Install
+        run: bundle exec pod install --repo-update
+
+      - name: Run Tests
+        run: Scripts/run_ios14_tests.sh
