--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,50 +25,25 @@ jobs:
       - name: Build
         run: xcodebuild -scheme "Listable-Package" -destination "platform=iOS Simulator,OS=17.2" -sdk iphonesimulator build
 
-  ios_17:
-    name: iOS 17
+  test:
+    name: "iOS ${{ matrix.sdk }}"
 
     runs-on: macos-13-xlarge
 
-    steps:
+    strategy:
+      matrix:
+        include:
+          - sdk: "15.4"
+            simulator_name: iPhone SE (3rd generation)
+            installation_required: true
 
-      - name: Checkout repository
-        uses: actions/checkout@v1
+          - sdk: "16.2"
+            simulator_name: iPhone SE (3rd generation)
+            installation_required: true
 
-      - name: Read env
-        run: cat .github/workflows/env.properties >> $GITHUB_ENV
-
-      - name: Switch to Xcode ${{ env.xcode_version }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          # Uses version specified in .ruby_version
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-      # Build Caching
-
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-
-      # Install & Build
-
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
-
-      - name: Run Tests
-        run: Scripts/run_ios17_tests.sh
-
-  ios_16:
-    name: iOS 16
-
-    runs-on: macos-13-xlarge
+          - sdk: "17.2"
+            simulator_name: iPhone SE (3rd generation)
+            installation_required: true
 
     steps:
 
@@ -88,10 +63,12 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Install xcodes
+        if: ${{ matrix.installation_required }}
         run: brew install aria2 xcodesorg/made/xcodes
 
       - name: Install iOS ${{ matrix.sdk }}
-        run: sudo xcodes runtimes install "iOS 16.2"
+        if: ${{ matrix.installation_required }}
+        run: sudo xcodes runtimes install "iOS ${{ matrix.sdk }}"
 
       # Build Caching
 
@@ -108,97 +85,6 @@ jobs:
       - name: Pod Install
         run: bundle exec pod install --repo-update
 
-      - name: Run Tests
-        run: Scripts/run_ios16_tests.sh
-
-  ios_15:
-    name: iOS 15
-
-    runs-on: macos-13-xlarge
-
-    steps:
-
-      - name: Checkout repository
-        uses: actions/checkout@v1
-
-      - name: Read env
-        run: cat .github/workflows/env.properties >> $GITHUB_ENV
-
-      - name: Switch to Xcode ${{ env.xcode_version }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          # Uses version specified in .ruby_version
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-      - name: Install xcodes
-        run: brew install aria2 xcodesorg/made/xcodes
-
-      - name: Install iOS ${{ matrix.sdk }}
-        run: sudo xcodes runtimes install "iOS 15.2"
-
-      # Build Caching
-
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-
-      # Install & Build
-
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
-
-      - name: Run Tests
-        run: Scripts/run_ios15_tests.sh
-
-  ios_14:
-    name: iOS 14
-
-    runs-on: macos-13-xlarge
-
-    steps:
-
-      - name: Checkout repository
-        uses: actions/checkout@v1
-
-      - name: Read env
-        run: cat .github/workflows/env.properties >> $GITHUB_ENV
-
-      - name: Switch to Xcode ${{ env.xcode_version }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          # Uses version specified in .ruby_version
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-      - name: Install xcodes
-        run: brew install aria2 xcodesorg/made/xcodes
-
-      - name: Install iOS ${{ matrix.sdk }}
-        run: sudo xcodes runtimes install "iOS 14.5"
-
-      # Build Caching
-
-      - name: Cache Cocoapods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-
-      # Install & Build
-
-      - name: Pod Install
-        run: bundle exec pod install --repo-update
-
-      - name: Run Tests
-        run: Scripts/run_ios14_tests.sh
+      - name: Build & Test
+        run: |
+          xcodebuild -workspace Demo/Demo.xcworkspace -scheme "Demo" -destination "platform=iOS Simulator,OS=${{ matrix.sdk }},name=${{ matrix.simulator_name }}" build test
