--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -11,7 +11,7 @@ jobs:
   spm:
     name: Swift Package Manager
 
-    runs-on: macos-14-xlarge
+    runs-on: ${{ env.macos_runner }}
 
     steps:
       - name: Switch to Xcode ${{ env.xcode_version }}
@@ -28,7 +28,7 @@ jobs:
   test:
     name: "iOS ${{ matrix.sdk }}"
 
-    runs-on: macos-14-xlarge
+    runs-on: ${{ env.macos_runner }}
 
     strategy:
       matrix:
