--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,6 +24,18 @@ jobs:
       - name: Switch to Xcode ${{ env.xcode_version }}
         run: sudo xcode-select -s /Applications/Xcode_${{ env.xcode_version }}.app
 
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          # Uses version specified in .ruby_version
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+      - name: Install xcodes
+        run: brew install aria2 xcodesorg/made/xcodes
+
+      - name: Install iOS ${{ matrix.sdk }}
+        run: sudo xcodes runtimes install "iOS 18.2"
+
       # Build
 
       - name: Build
