--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -65,7 +65,7 @@ jobs:
       
       - name: Build & Test Snapshot Package (iOS Simulator)
         run: |
-          cd "Internal Pods/Snapshot"
+          cd "Internal/Snapshot"
           xcodebuild \
             -scheme Snapshot \
             -destination "platform=${{ env.TUIST_TEST_PLATFORM }} Simulator,OS=${{ matrix.sdk }},name=${{ env.TUIST_TEST_DEVICE }}" \
