--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -53,18 +53,11 @@ jobs:
         if: ${{ matrix.installation_required }}
         run: sudo xcodes runtimes install "iOS ${{ matrix.sdk }}"
 
-      - name: Build
-        run: |
-          xcodebuild \
-            -scheme "Listable-Package" \
-            -destination "platform=${{ env.TUIST_TEST_PLATFORM }} Simulator,OS=${{ matrix.sdk }},name=${{ env.TUIST_TEST_DEVICE }}" \
-            -sdk iphonesimulator build
-
       - name: Install Tuist dependencies for Development
         run: tuist install --path Development/
 
       - name: Test All
-        run: tuist test ListableDevelopment-Workspace --path Development/ --os ${{ matrix.sdk }} --result-bundle-path TestResult.xcresult
+        run: tuist test ListableDevelopment-Workspace --path Development/ --platform ${{ env.TUIST_TEST_PLATFORM }} --os ${{ matrix.sdk }} --device "${{ env.TUIST_TEST_DEVICE }}" --result-bundle-path TestResult.xcresult
 
       - name: Upload TestResult
         uses: actions/upload-artifact@v4
