--- a/.github/workflows/env.properties
+++ b/.github/workflows/env.properties
@@ -1,3 +1,3 @@
-xcode_version=16.2
-TUIST_TEST_DEVICE=iPhone SE (3rd generation)
+xcode_version=16.4
+TUIST_TEST_DEVICE=iPhone 16
 TUIST_TEST_PLATFORM=iOS
